tests/NormalTests/paczka1/fuzzy1/37257610.err
Error in line 5: J07 S149 86,4
Error in line 6: 8gRMQpK6q2 A467 43,3
Error in line 7: J07 A467 23,4
Error in line 15: S149 S531 37,9
Error in line 18: MeVrfCBc S531 59,3
Error in line 20: 8gRMQpK6q2 S149 74,1
Error in line 38: ?4XFFeqxg
